# mymcp

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  audit.py  auth.py  config.py  main.py  mcp_server.py  metrics.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-test.yml  release.yml
deploy/: UPGRADE_NOTES.md  install.sh  install_lib.sh  logrotate.mymcp-upgrade  mymcp.service  upgrade.sh
deploy/grafana/: README.md  mymcp-dashboard.json
docs/: PUBLISHING.md
docs/superpowers/plans/: 2026-04-01-linux-mcp-server.md  2026-04-10-audit-and-permissions.md  2026-04-10-interactive-install-script.md  2026-04-16-comprehensive-testing.md  2026-04-18-version-upgrade.md  2026-04-21-security-testing.md  2026-04-22-prometheus-monitoring.md  2026-04-22-version-info.md  2026-04-26-pip-distribution-plan-1-package-foundation.md  2026-04-26-pip-distribution-plan-2-production-install.md  2026-04-26-pip-distribution-plan-3-public-release.md  2026-04-28-maintenance-and-monitoring.md  2026-05-05-file-transfer.md
docs/superpowers/specs/: 2026-04-01-linux-mcp-server-design.md  2026-04-09-interactive-install-script-design.md  2026-04-10-audit-and-permissions-design.md  2026-04-16-comprehensive-testing-design.md  2026-04-18-version-upgrade-design.md  2026-04-21-security-testing-design.md  2026-04-22-prometheus-monitoring-design.md  2026-04-22-version-info-design.md  2026-04-26-pip-distribution-design.md  2026-04-28-maintenance-and-monitoring-design.md  2026-05-04-file-transfer-design.md
scripts/: fetch-ripgrep.sh  install-offline.sh
src/mymcp/: __init__.py  __main__.py  audit.py  auth.py  cli.py  config.py  mcp_server.py  metrics.py  server.py
src/mymcp/deploy/: __init__.py  migrate.py  service.py  setup.py
src/mymcp/tools/: bash.py  files.py
tests/: pentest.py  test_admin.py  test_audit.py  test_auth.py  test_bash.py  test_bash_signal_cleanup.py  test_benchmark.py  test_boundary.py  test_clamping.py  test_cli.py  test_config_settings.py  test_deploy_migrate.py  test_deploy_service.py  test_deploy_setup.py  test_doctor.py  test_files.py  test_install.bats  test_install_service_cli.py  test_integration.py  test_main.py  test_mcp.py  test_metrics.py  test_permissions.py  test_protected_paths.py  test_security.py  test_server_factory.py  test_token_cli.py  test_transfer.py  test_upgrade.bats  test_upgrade_integration.bats  test_version.py
tests/deploy/integration/: Dockerfile.debian  Dockerfile.rocky  _setup.sh  run_all.sh  (+4 more)
tests/loadtest/: locustfile.py
tools/: bash.py  files.py  transfer.py
(+1 files in other folders)
